make sure items wrap onto next line and docs

--- a/src/component-library/components/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/component-library/components/Breadcrumbs/Breadcrumbs.module.scss
@@ -11,19 +11,28 @@
   display: flex;
   align-items: center;
 
-  @include media(screen-m) {
+  @include media(screen-l) {
     padding: px-to-rem(24) $spacing-11;
+    flex-wrap: wrap;
+    gap: px-to-rem(12) 0;
   }
 
   a {
     @include apply-body-semi-bold-large;
 
+    display: flex;
     align-items: center;
+    gap: 0 px-to-rem(8);
     color: inherit;
     text-decoration: none;
 
-    @include media(screen-m) {
+    span {
+      @include apply-body-large;
+    }
+
+    @include media(screen-l) {
       display: flex;
+      text-wrap: nowrap;
 
       &::after {
         content: '';
@@ -33,16 +42,6 @@
         background: $white;
         margin: 0 px-to-rem(12);
       }
-    }
-  }
-
-  & > div {
-    display: flex;
-    align-items: center;
-    gap: 0 px-to-rem(8);
-
-    span {
-      @include apply-body-large;
     }
   }
 }
